
[gd_scene load_steps=6 format=1]

[ext_resource path="res://shuriken.gd" type="Script" id=1]
[ext_resource path="res://Resources/FX/2.png" type="Texture" id=2]
[ext_resource path="res://Resources/fireball.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource/name = "rotation"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FX:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4 ] }

[node name="Shoot" type="Area2D" groups=[ "transparent" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="FX" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 5
frame = 2

[node name="fire_ball" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rotation = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="." to="." method="_on_Shoot_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_Shoot_body_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]

